# FAME

./: .gitignore  .pypirc  .readthedocs.yaml  README.md  debug.txt  environment.yaml  environment_linux.yaml  environment_linux.yml  pyproject.toml  test_mesh.vtk
docs/: requirements.txt
docs/developerReadme/: development.md  pushingChanges.md  pushingPackages.md
docs/source/: FVM.rst  conf.py  index.rst  intro.md  main.rst  modules.rst
docs/source/_static/: style.css
docs/source/theories/: heatDiffusion.rst  heatDiffusionTransient.rst  heatDiffusionTransient2.rst
examples/FVM/HeatDiffusion/: setup.yaml  setup_1D.yaml  setup_small.yaml  setup_transient_small.yaml
fame/FVM/: discretization.py  finiteVolumeMethod.py  mesh.py  solver.py  visualization.py
fame/utils/: utility.py
src/: main.py
src/FVM/: __init__.py  boundaryCondition.py  discretization.py  finiteVolumeMethod.py  jax_fdm.py  mesh.py  property.py  solver.py  visualization.py
tests/: bed.py  bed_01.py  bed_02.py  bed_03.py  bed_04.py  bed_05.py  testBoundaryCondition.py  testDiscretization.py  testFiniteVolumeMethod.py  testMesh.py  testProperty.py  testSolver.py  testVisualization.py
