[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FAME"
version = "0.0.1"
authors = [
  { name="Abdullah Al Amin", email="nirjhor18@gmail.com" },
]
description = "A framework for emulating additive manufacturing processes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/neoceph/FAME"
Issues = "https://github.com/neoceph/FAME/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/FVM"]
