[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FAME"
version = "0.0.1"
description = "A framework for emulating additive manufacturing processes."
authors = [
  { name="Abdullah_Al_Amin", email="nirjhor18@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/neoceph/FAME"
Issues = "https://github.com/neoceph/FAME/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/FVM"]


[testpypi]
  username = "__token__"
  password = "pypi-AgENdGVzdC5weXBpLm9yZwIkMGU0ZjAxOGQtYTUwNi00M2VkLWI3NTctY2UyZDVjMTU0ZTk2AAIqWzMsImE0NjZlZGQwLWU2YTQtNDAwNS04Nzc3LWM0OWYyNDI5MWM0ZCJdAAAGIAAgE5C3MqTcfd3oixgtM3fcUK7ny_snUWjgqV9bCOUV"